# snowbound

./: CMakeLists.txt  README.md
assets/levels/: 0.txt  1.txt  2.txt  3.txt
assets/meshes/: box.sbm  button.sbm  crate.sbm  cube.sbm  ice.sbm  pad.sbm  pillar.sbm  plane.sbm  water.sbm
include/: sb_app.h  sb_arena.h  sb_common.h  sb_file.h  sb_math.h  sb_mesh.h  sb_string.h  sb_swapchain.h  sb_texture.h  sb_timer.h  sb_transfer_buffer.h  sb_vulkan_initializers.h  sb_vulkan_memory.h  sb_window.h
shaders/: compile.bat
shaders/glsl/: camera.h  core.h  fullscreen_tri.vert  gpass.vert  gpass_pixel.frag  lighting.frag  shader.comp  shader_ids.h  shadow.vert  ssao.frag  ssao_blur.frag  time.h  wave.h
shaders/spv/: fullscreen_tri.spv  gpass.spv  gpass_pixel.spv  lighting.spv  shader.spv  shadow.spv  ssao.spv  ssao_blur.spv
src/: sb_app.c  sb_arena.c  sb_file.c  sb_math.c  sb_mesh.c  sb_string.c  sb_swapchain.c  sb_timer.c  sb_transfer_buffer.c  sb_vulkan_initializers.c  sb_vulkan_memory.c  sb_window.c
src/icebreaker/: main.c
